--- a/two_cols_site.html
+++ b/two_cols_site.html
@@ -1,73 +1,38 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Two-Column</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="two_cols.css">
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('https://cdn.shopify.com/s/files/1/0981/7352/articles/103819597_Subscription_S_1_880x.jpg?v=1496692166');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>
 </head>
 <body>
-	<div id="wrapper">
-		<div id="header">
-			<div class="box">
-				<a href="https://www.ctu.edu.vn/">
-					<img src="logo.png" alt="Logo" width="100" height="100">
-				</a>
-			</div>
-			<a href="https://cet.ctu.edu.vn/images/upload/daotao/decuong/KC326.pdf">
-				<p>Công nghệ IoTs và Ứng dụng</p>
-			</a>
-		</div>
-		<!-- Menu chính nằm ngang -->
-		<div id="top-menu">
-			<ul>
-				<li><a href="#"> Trang chủ</a></li>
-				<li><a href="two_cols_site_cdr.html" >Chuẩn đầu ra</a></li>
-				<li><a href="#">PPGD và NVSV</a></li>
-				<li><a href="#">Đánh giá</a></li>
-				<li><a href="#">TLTK</a></li>
-			</ul>
-		</div>
 
-		<div id="left">
-				
-			<h3>Liên kết</h3>
-			<ul style="background-color: lightblue">
-				<li><a href="#">CTU</a></li>
-				<li><a href="#">Khoa CN</a></li>
-				<li><a href="https://w3schools.com/css">W3School</a></li>
-				<li><a href="#">HTQL</a></li>
-			</ul>
-		</div>
-		<div id="right">
-			<img src="img1.png" alt="iot" width="400" height="300">
-			<p>Trong xu thế bắt kịp kiến thức và kỹ năng chuyên môn kỹ sư tự động hóa, cơ điện tử. IoT là một lĩnh vực phù hợp xu thế ứng dụng Internet để kết nối các thiết bị phần cứng theo nguyên lý không dây và tốc độ cao. Học phần này được xây dựng giúp sinh viên ngành Tự Động Hóa và Cơ Điện Tử trải nghiệm nguyên lý, thiết kế, kết nối, lập trình, thu thập dữ liệu thông qua giao diện web được lập trình theo khả năng của từng sinh viên qua các ứng dụng cơ bản được giới thiệu và hướng dẫn trên lớp của giảng viên.</p>
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    Đội 4
+  </div>
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top">IoT - Applications </h1>
+    <h1 class="w3-jumbo w3-animate-top">Eggs Incubator 1.0 </h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center"> <a href="https://www.facebook.com/efferalgan550/" target="_blank">Click vào đây rồi mình đi ấp trứng luôn</p></a>
+  </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+    Powered by <a href="https://www.facebook.com/efferalgan550/" target="_blank">Đức, và những người bạn</a>
+  </div>
+</div>
 
-			<!-- Mục tiêu -->
-			<table>
-			  <tr>
-			    <th style="width: 100px;"> <i class="fa fa-futbol-o"></i> Mục tiêu</th>
-			    <th>Nội dung mục tiêu</th>
-			    <th>CĐR CTĐT</th>
-			  </tr>
-			  <tr>
-			    <td style="text-align: center;">4.1</td>
-			    <td>Nắm vững nguyên lý cơ bản về IoT, nguyên lý thiết kế, kết nối và truyền dữ liệu trong các ứng dụng IoT.</td>
-			    <td>2.1.3a</td>
-			  </tr>
-			  <tr>
-			    <td style="text-align: center;">4.2</td>
-			    <td>Thiết kế tốt bộ điều khiển IoT, lập trình nhúng và lập trình Web cơ bản ứng dụng IoT.</td>
-			    <td>2.2.1a<br>2.2.1b</td>
-			  </tr>
-			  <tr>
-			    <td style="text-align: center;">4.3</td>
-			    <td>Làm việc nhóm để giải quyết vấn đề.</td>
-			    <td>2.2.2a</td>
-			  </tr>
-			</table>
-		</div>
-		<div id="footer">
-			<p>KC326 Course &copy Nguyen Van Khanh - PLC&IIoT Công nghiệp</p>
-		</div>
-	</div>
 </body>
+</html>
